gccida/g1/canon_true_dependence
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/canon_true_dependence/src/alias.c:2567:38: error: must use 'enum' tag to refer to type 'machine_mode'
int  canon_true_dependence( rtx mem, machine_mode mem_mode, rtx mem_addr, rtx x, int ( *varies)( rtx, int)) 
                                     ^
                                     enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/canon_true_dependence/src/alias.c:2587:42: error: use of undeclared identifier 'machine_mode'
v7 = base_alias_check( addr, mem_addr, ( machine_mode)*( ( unsigned __int8 *)x + 2), mem_mode); 
                                         ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/canon_true_dependence/src/obj/alias.o] Error 1
